--- a/templates/add.html
+++ b/templates/add.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <form action="{{ url_for('add') }}" method="POST">
-        <label for="name">Book Name</label>
-        <input type="text" id="name" name="name">
+        <label for="title">Book Title</label>
+        <input type="text" id="title" name="title">
         <label for="author">Book Author</label>
         <input type="text" id="author" name="author">
         <label for="rating">Rating</label>
